<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minWidth="270dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/are_you_sure_you_want_to_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/yes"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="#ffffff"
        android:background="@drawable/blue_back_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/white_back_round"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />
</androidx.constraintlayout.widget.ConstraintLayout>